fixed some spacing issues

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -169,7 +169,7 @@ img.middle-img {
 
 .content-box {
 	margin: 50px;
-	margin-top: 0px;
+	margin-top: -20px;
 }
 
 img.services-header-img {
@@ -182,6 +182,10 @@ img.services-header-img {
 	border-bottom: 1px solid black;
 }
 
+.info-section h1 {
+	font-size: 1.5em;
+}
+
 section.bottom-section {
 	width: 32.5%;
 	padding-bottom: 50px;
@@ -190,7 +194,7 @@ section.bottom-section {
 
 .services-info-section {
 	padding-bottom: 50px;
-	padding-top: 40px;
+	padding-top: 20px;
 	display: inline-block;
 	height: 375px;
 }
@@ -219,7 +223,7 @@ img.services-info-img {
 	width: 48%;
 	background-color: #F2F3F4;
 	border: 1px solid black;
-	padding: 10px;
+	padding: 20px;
 	margin-bottom: 30px;
 }
 
@@ -231,7 +235,7 @@ img.services-info-img {
 	border-radius: 4px;
 	font-size: 12px;
 	text-decoration: none;
-	width: 125px;
+	width: 140px;
 	height: 35px;
 	text-align: center;
 	padding: 10px;
